try to fix the rounded corner on mobile.

--- a/style.css
+++ b/style.css
@@ -40,9 +40,11 @@ p {
 .row {
     min-height: 720px;
     width: 60%;
+    padding: 0px;
     margin: 250px auto 250px auto;
     grid-auto-rows: 1fr;
     grid-auto-flow: dense;
+    border-radius: var(--corner-radius);
 }
 
 /*The columns inside a row are all floating to the left, and are therefore taken out of the flow of the page, and other
@@ -74,6 +76,7 @@ p {
     float: left;
     background-color: var(--dark-cyan);
     padding: var(--padding-size);
+    overflow: hidden;
 }
 
 .right {
@@ -145,6 +148,7 @@ p {
         width: 100%;
         max-width: 375px;
         margin: 25px 5px 25px 5px;
+        border-radius: var(--corner-radius);
     }
 
     .left {
@@ -153,7 +157,8 @@ p {
         max-width: 360px;
         background-color: var(--bright-orange);
         padding: var(--padding-size);
-        border-bottom-left-radius: none;
+        border-radius: none;
+        border-top-left-radius: var(--corner-radius);
         border-top-right-radius: var(--corner-radius);
     }
     
@@ -171,8 +176,9 @@ p {
         max-width: 360px;
         background-color: var(--very-dark-cyan);
         padding: var(--padding-size);
-        border-top-right-radius: none;
+        border-radius: none;
         border-bottom-left-radius: var(--corner-radius);
+        border-bottom-right-radius: var(--corner-radius);
     }
 
   }
